<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:text="@string/E11"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="@string/E12" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E13" />
        <Button
            android:id="@+id/button4"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/E14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E21" />

        <Button
            android:id="@+id/button6"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="@string/E22" />
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E23" />

        <Button
            android:id="@+id/button8"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/E24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:text="@string/E31"/>
        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E32" />
        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E33" />

        <Button
            android:id="@+id/button12"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/E34" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E41" />

        <Button
            android:id="@+id/button14"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/E42" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E43" />

        <Button
            android:id="@+id/button16"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/E44" />
    </LinearLayout>



</LinearLayout>
